--- a/demo1/templates/demo1/listados/listado_viaje.html
+++ b/demo1/templates/demo1/listados/listado_viaje.html
@@ -1,13 +1,57 @@
 {% extends 'demo1/base.html' %}
 
 {% block content %}
-    <h2>Listado de viajes</h2>  
-    <div>
-        <ul>
-        {% for viaje in viajes %}
-            <li><a href="{% url 'detalle_viaje' pk=viaje.pk%}">{{ viaje }}</a></li>
-        {% endfor %}
-        </ul>
+<div class="card">
+    <h2>Listado de Viajes</h2>  
+</div>
+    <div >
+    <table class="tablalista" width=100% border="1">
+        <tbody>
+        {% if cantidad %}
+            <tr>
+                <td align="center" colspan="5">Ruta</td>
+                <td align="center" rowspan="2">Cant. de Asientos</td>
+                <td align="center" rowspan="2">Fecha</td>
+                <td align="center" rowspan="2">Precio</td>
+                <td align="center" rowspan="2" colspan="2">Opcines</td>
+            </tr>
+            <tr>
+                <td align="center">Combi-Patente</td>
+                <td align="center">Origen</td>
+                <td align="center">Destino</td>
+                <td align="center">Distancia</td>
+                <td align="center">Hora</td>
+            </tr>
+            {% for v in page_obj %}
+                <tr>
+                    <td>{{ v.patente }}</td>
+                    <td>{{ v.origen }}</td>
+                    <td>{{ v.destino }}</td>
+                    <td>{{ v.hora }}</td>
+                    <td>{{ v.distancia }}</td>
+                    <td>{{ v.cant }}</td>
+                    <td>{{ v.fecha }}</td>
+                    <td>{{ v.precio }}</td>
+                    <td>
+                        <a href="">Eliminar</a></td>
+                    <td>
+                        <a href="">Modificar</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        {% else %}
+            <p>No se registro ningun viaje</p>
+        {% endif %}
+    </tbody>
+    </table>
     </div>
-    <div><a href="{% url 'principal' %}">Atras</a></div>
+    <div>
+        {%if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+        {%endif%}
+        {%if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number}}">Siguiente</a>
+        {%endif%}
+</div>
+<div class="card"><h4><a href="{% url 'principal' %}">Atras</a></h4></div>
 {% endblock %}
