--- a/demo1/templates/demo1/listados/listado_insumo.html
+++ b/demo1/templates/demo1/listados/listado_insumo.html
@@ -2,19 +2,43 @@
 
 {% block content %}
 <div class="card">
-    <h2>Listado de insumos</h2> 
-</div>> 
-    <div class="card">
-        <ul>
-        {% for insumo in insumos %}
-            <h4 class="card">{{ insumo }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="{% url 'detalle_insumo' pk=insumo.pk%}">detalle</a> 
-                &nbsp;&nbsp; <a href="{% url 'modificar_insumo' pk=insumo.pk%}"> modificar </a>
-                &nbsp;&nbsp; <a href="{% url 'eliminar_insumo' pk=insumo.pk%}"> eliminar </a></h4>
-            <br>
-        {% endfor %}
-        </ul>
+    <h2>Listado de insumos</h2>  
+</div>
+    <div>
+    <table class="tablalista" width=100% border="1">
+        <tbody>
+        {% if cantidad %}
+            <tr>
+                <td align="center">Nombre</td>
+                <td align="center">Tipo</td>
+                <td align="center">Precio</td>
+                <td align="center" colspan="2">Opcines</td>
+            </tr>
+            {% for i in page_obj %}
+                <tr>
+                    <td>{{ i.nombre  }}</td>
+                    <td>{{ i.tipo }}</td>
+                    <td>{{ i.precio }}</td>
+                    <td>
+                        <a href="{% url 'eliminar_insumo' pk=i.pk%}">Eliminar</a></td>
+                    <td>
+                        <a href="{% url 'modificar_insumo' pk=i.pk%}">Modificar</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        {% else %}
+            <p>No se registro ningun insumo</p>
+        {% endif %}
+    </tbody>
+    </table>
     </div>
-    <div class="card"><a href="{% url 'principal' %}">Atras</a></div>
+    <div>
+        {%if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+        {%endif%}
+        {%if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number}}">Siguiente</a>
+        {%endif%}
+</div>
+<div class="card"><h4><a href="{% url 'principal' %}">Atras</a></h4></div>
 {% endblock %}
