arregle los eliminar de ruta, ect

--- a/demo1/templates/demo1/listados/listado_lugar.html
+++ b/demo1/templates/demo1/listados/listado_lugar.html
@@ -11,7 +11,7 @@
             <tr>
                 <td align="center">Localidad</td>
                 <td align="center">Provincia</td>
-                <td align="center" colspan="2">Opcines</td>
+                <td align="center" colspan="2">Opciones</td>
             </tr>
             {% for lugar in page_obj %}
                 <tr>
