--- a/demo1/templates/demo1/modificar/formulario_modificar_ruta.html
+++ b/demo1/templates/demo1/modificar/formulario_modificar_ruta.html
@@ -3,16 +3,16 @@
 <div class="page-header">
     <h1>Modificar Ruta</h1>
 </div>
-<div>
+<div class="card">
     <div class="formu container">
-        <div>
+        <div class="card">
             <form method="POST" class="post-form">
                 {% csrf_token %}
                 {{ form.as_p}}
                 <button type="submit" class="guardar chofer">Guardar</button>
             </form>
         </div>
-        <div>
+        <div class="card">
             <h2><a href="{% url 'listado_ruta' %}"> Atras</a></h2>
         </div>
     </div>
