--- a/demo1/templates/demo1/detalle/detalle_chofer.html
+++ b/demo1/templates/demo1/detalle/detalle_chofer.html
@@ -4,15 +4,17 @@
     <div class="Chofer">
         <h4><a href="">{{c}}</a></h4>
         {% for c in chofer%}
-            <p>nombre de usuario: {{ c.usuario.username }}</div>
-            <p>nombre: {{ c.usuario.first_name }}</p>
+        <div class="card">
+            <div>
+           <h3><p>nombre: {{ c.usuario.first_name }}</p>
             <p>Apellido: {{ c.usuario.last_name }}</p>
             <p>Email: {{ c.usuario.email }}</p>
             <p>Dni: {{ c.dni }}</p>
-            <p>Telefono: {{ c.telefono }}</p>
+            <p>Telefono: {{ c.telefono }}</p></h3>
+        </div>>
         {%endfor%}   
     </div>
-    <div>
-        <h2><a href="{% url 'principal' %}"> salir</a></h2>
+    <div class="card">
+        <h2><a href="{% url 'listado_chofer' %}"> Atras</a></h2>
     </div>
 {% endblock %}
