login,logout,registro tarjeta y usuario

--- a/demo1/templates/demo1/form/formulario_usuario.html
+++ b/demo1/templates/demo1/form/formulario_usuario.html
@@ -1,16 +1,17 @@
 {% extends 'demo1/base_registrar.html' %}
 
 {% block content %}
-    <h2>Registrarse</h2>
     <form method="POST" class="post-form" id="usuarioForm">
         {% csrf_token %}
         {{ form.as_p}}
         <button type="submit" class="guardar usuario">Registrar</button>
+        <div>
+            <h2><a href="{% url 'principal' %}"> Salir</a></h2>
+        </div>
     </form>
     {% if exitoso %}
         {% if tipo %}
         <div>
-            <p> Se ha registrado exitosamente</p>
             <meta http-equiv="refresh" content="0; URL=http://127.0.0.1:8000/login/" />
         </div>
         {% else %}
@@ -23,16 +24,12 @@
             {% if edad < 18 %}
                 <div>
                     <p> No ha podido registrarse correctamente ya que debe ser mayor a 18 años</p>
-                    <meta http-equiv="refresh" content="1; URL=http://127.0.0.1:8000/registrar/" />
                 </div>
-            {% endif %}
+            {% else %}
             <div>
                 <p> No ha podido registrarse correctamente ya que el email o dni ya existen </p>
-                <meta http-equiv="refresh" content="1; URL=http://127.0.0.1:8000/registrar/" />
             </div>
+            {% endif %}
         {% endif %}
     {% endif %}
-    <div>
-        <h2><a href="{% url 'principal' %}"> salir</a></h2>
-    </div>
 {% endblock %}
