--- a/demo1/templates/demo1/base.html
+++ b/demo1/templates/demo1/base.html
@@ -8,15 +8,19 @@
     </head>
     <body>
         <div class="page-header">
-            <h1>Menú administrativo de Combi19</h1>
+        {% if user.is_authenticated %}
+                <h1>Menú administrativo de Combi19</h1>
         </div>
-        <div class="card"><h4><a href="">Cerrar sesion administrador</a> </h4> </div>
-        <br>
-        <div>
-            <div class="content container">
-                {% block content %}
-                {% endblock %}
-            </div>  
+            <div class="card"><h4><a href="http://127.0.0.1:8000/logout/">Cerrar sesion administrador</a> </h4> </div>
+            <br>
+            <div>
+                <div class="content container">
+                    {% block content %}
+                    {% endblock %}
+                </div>  
         </div>
+        {% else %}
+            <h4>Error, No ha iniciado sesion</h4>
+        {% endif %}
     </body>
 </html>
