Correciones de los agregar

--- a/demo1/templates/demo1/form/formulario_chofer.html
+++ b/demo1/templates/demo1/form/formulario_chofer.html
@@ -13,7 +13,7 @@
             </form>
             {% if valor %}
                 <div>
-                    <p> El dni o email ingresado ya esta registrado</p>
+                    <p> El dni o email ingresado ya estan registrado</p>
                 </div>
             {% endif %}
             {% if exitoso %}
