--- a/demo1/templates/demo1/form/formulario_usuario.html
+++ b/demo1/templates/demo1/form/formulario_usuario.html
@@ -6,7 +6,7 @@
         {{ form.as_p}}
         <button type="submit" class="guardar usuario">Registrar</button>
         <div>
-            <h2><a href="{% url 'principal' %}"> Salir</a></h2>
+            <h2><a href="{% url 'login' %}"> Salir</a></h2>
         </div>
     </form>
     {% if exitoso %}
