hice home de chofer

--- a/demo1/templates/demo1/base.html
+++ b/demo1/templates/demo1/base.html
@@ -20,7 +20,8 @@
                 </div>  
         </div>
         {% else %}
-            <h4>Error, No ha iniciado sesion</h4>
+            <h2 class='card'> <p>Error, No ha iniciado sesion</p></h2>  
+            <h2 class='card'> <a href="http://127.0.0.1:8000/login/">Iniciar Sesión</a></h2>  
         {% endif %}
     </body>
 </html>
