--- a/demo1/templates/demo1/listados/listado_ruta.html
+++ b/demo1/templates/demo1/listados/listado_ruta.html
@@ -22,7 +22,11 @@
                     <td>
                         <a href="{% url 'eliminar_ruta' pk=i.pk%}">Eliminar</a></td>
                     <td>
-                        <a href="{% url 'modificar_ruta' pk=i.pk%}">Modificar</a>
+                        {%if i.sePuede %}
+                            <a href="{% url 'modificar_ruta' pk=i.pk%}">Modificar</a>
+                        {% else %}
+                            <a href="{% url 'listado_ruta' %}">Modificar</a>
+                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
@@ -31,6 +35,12 @@
         {% endif %}
     </tbody>
     </table>
+    {% if exitosoE %}
+        <p>La ruta que desea eliminar esta en un viaje presente o futuro, no se realizo la eliminación</p>
+    {% endif %}
+    {% if noSePuede %}
+        <p>La ruta no se puede modificar debido a que corresponde a un viaje activo o futuro</p>
+    {% endif %}
     </div>
     <div>
         {%if page_obj.has_previous %}
