--- a/demo1/templates/demo1/form/formulario_ruta.html
+++ b/demo1/templates/demo1/form/formulario_ruta.html
@@ -13,7 +13,7 @@
             </form>
             {% if valor %}
             <div>
-                <p>La Ruta ya se encuentra registrado</p>
+                <p>La Ruta ya se encuentra registrado o la combi ya tiene asignada la ruta</p>
             </div>
             {% endif %}
             {% if exitoso %}
