--- a/demo1/templates/demo1/listados/listado_chofer.html
+++ b/demo1/templates/demo1/listados/listado_chofer.html
@@ -23,7 +23,7 @@
                         <a href="{% url 'detalle_chofer' pk=chofer.pk%}">Detalle</a></td>
                     <td> 
                         <a href="{% url 'eliminar_chofer' pk=chofer.pk%}">Eliminar</a></td>
-                    {% if i.puede %}
+                    {% if chofer.puede %}
                         <td>
                             <a href="{% url 'modificar_chofer' pk=chofer.pk%}">Modificar</a>
                         </td>
