datos cargados y correciones

--- a/demo1/templates/demo1/listados/listado_chofer.html
+++ b/demo1/templates/demo1/listados/listado_chofer.html
@@ -12,7 +12,7 @@
                 <td align="center">Nombre</td>
                 <td align="center">Apellido</td>
                 <td align="center">Email</td>
-                <td align="center" colspan="3">Opcines</td>
+                <td align="center" colspan="3">Opciones</td>
             </tr>
             {% for chofer in page_obj %}
                 <tr>
