--- a/demo1/templates/demo1/listados/listado_insumo.html
+++ b/demo1/templates/demo1/listados/listado_insumo.html
@@ -12,7 +12,7 @@
                 <td align="center">Nombre</td>
                 <td align="center">Tipo</td>
                 <td align="center">Precio</td>
-                <td align="center" colspan="2">Opcines</td>
+                <td align="center" colspan="2">Opciones</td>
             </tr>
             {% for i in page_obj %}
                 <tr>
