--- a/demo1/templates/demo1/listados/listado_viaje.html
+++ b/demo1/templates/demo1/listados/listado_viaje.html
@@ -13,7 +13,7 @@
                 <td align="center" rowspan="2">Cant. de Asientos</td>
                 <td align="center" rowspan="2">Fecha</td>
                 <td align="center" rowspan="2">Precio</td>
-                <td align="center" rowspan="2" colspan="2">Opcines</td>
+                <td align="center" rowspan="2" colspan="2">Opciones</td>
             </tr>
             <tr>
                 <td align="center">Combi-Patente</td>
