--- a/demo1/templates/demo1/listados/listado_ruta.html
+++ b/demo1/templates/demo1/listados/listado_ruta.html
@@ -12,7 +12,7 @@
                 <td align="center">Origen</td>
                 <td align="center">Destino</td>
                 <td align="center">Hora</td>
-                <td align="center" colspan="2">Opcines</td>
+                <td align="center" colspan="2">Opciones</td>
             </tr>
             {% for i in page_obj %}
                 <tr>
