--- a/demo1/templates/demo1/listados/listado_lugar.html
+++ b/demo1/templates/demo1/listados/listado_lugar.html
@@ -44,7 +44,7 @@
 </div>
 {% if fallido %}
     <div>
-        <p>No fue posible borrar al chofer ya que se encuentra asignado a una combi</p>
+        <p>No fue posible borrar el lugar ya que se encuentra en una ruta</p>
     </div>
 {% endif %} 
 <div class="card"><h4><a href="{% url 'principal' %}">Atras</a></h4></div>
