--- a/demo1/templates/demo1/form/formulario_chofer.html
+++ b/demo1/templates/demo1/form/formulario_chofer.html
@@ -11,15 +11,23 @@
                 {{ form.as_p}}
                 <button type="submit" class="guardar chofer">Guardar</button>
             </form>
-            {% if valor %}
-                <div>
-                    <p> El dni o email ingresado ya estan registrado</p>
-                </div>
-            {% endif %}
             {% if exitoso %}
                 <div>
-                    <p> La carga se realizo con exito</p>
+                    <h3> La carga se realizo con exito</h3>
                 </div>
+            {% elif not dniUnico and not maiUnico %}
+                <div>
+                    <h3> El dni y el mail ya estan registrado</h3>
+                </div>
+            {% elif not dniUnico %}
+                <div>
+                    <h3> El dni ya estan registrado</h3>
+                </div>
+            {% elif not mailUnico %}
+                <div>
+                    <h3> El mail ya estan registrado</h3>
+                </div>
+            
             {% endif %}
         </div>
         <div>
