Alta chofer terminado

--- a/demo1/templates/demo1/form/formulario_chofer.html
+++ b/demo1/templates/demo1/form/formulario_chofer.html
@@ -15,7 +15,7 @@
                 <div>
                     <h3> La carga se realizo con exito</h3>
                 </div>
-            {% elif not dniUnico and not maiUnico %}
+            {% elif not dniUnico and not mailUnico %}
                 <div>
                     <h3> El dni y el mail ya estan registrado</h3>
                 </div>
