--- a/demo1/templates/demo1/listados/listado_combi.html
+++ b/demo1/templates/demo1/listados/listado_combi.html
@@ -24,11 +24,9 @@
                     <td> 
                         <a href="{% url 'eliminar_combi' pk=c.pk%}">Eliminar</a></td>
                     <td>
-                        {% if c.sePuede %}
+                        
                         <a href="{% url 'modificar_combi' pk=c.pk%}">Modificar</a>
-                        {% else %}
-                        <a href="">Modificar</a>
-                        {% endif %}
+                       
                     </td>
                 </tr>
             {% endfor %}
@@ -37,9 +35,13 @@
         {% endif %}
     </tbody>
     </table>
-    {% if noSePuede %}
+    {% if noEliminado %}
     <div>
-        <a>No se puede eliminar la combi seleccionado por que esta en un viaje</a>
+        <h3>No fue posible borrar la combi ya que se encuentra asignado a una ruta</h3>
+    </div>
+    {% elif noModificado %}
+    <div>
+        <h3>No fue posible modificar la combi ya que se encuentra asignado a un viaje</h3>
     </div>
     {% endif %}
     </div>
