ya repare insumos, lugares y combis

--- a/demo1/templates/demo1/listados/listado_combi.html
+++ b/demo1/templates/demo1/listados/listado_combi.html
@@ -35,6 +35,8 @@
         {% endif %}
     </tbody>
     </table>
+    </div>
+    <div class='card'>
     {% if noEliminado %}
     <div>
         <h3>No fue posible borrar la combi ya que se encuentra asignado a una ruta</h3>
